<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/small_padding">

    <TextView
        android:id="@+id/label_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/information"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/label_info" />

    <TextView
        android:id="@+id/label_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_hr" />

    <TextView
        android:id="@+id/text_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_type"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_episodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_episodes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_type" />

    <TextView
        android:id="@+id/text_episodes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_episodes"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_episodes" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_status"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_aired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_aired"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_status" />

    <TextView
        android:id="@+id/text_aired"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_aired"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_premiered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/premiered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_aired" />

    <TextView
        android:id="@+id/text_premiered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_premiered"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_broadcast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_broadcast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_premiered" />

    <TextView
        android:id="@+id/text_broadcast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_broadcast"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_producers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_producers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_broadcast" />

    <TextView
        android:id="@+id/text_producers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_producers"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_licensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_licensors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_producers" />

    <TextView
        android:id="@+id/text_licensors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_licensors"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_studios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_studios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_licensors" />

    <TextView
        android:id="@+id/text_studios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_studios"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_source"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_studios" />

    <TextView
        android:id="@+id/text_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_source"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_genres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_source" />

    <TextView
        android:id="@+id/text_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_genres"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_genres" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_duration"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_duration" />

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_rating"
        tools:text="@tools:sample/lorem" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>
