<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/small_padding">

    <TextView
        android:id="@+id/label_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/statistics"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/label_stats" />

    <TextView
        android:id="@+id/label_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_hr" />

    <TextView
        android:id="@+id/text_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/label_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/label_ranked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_ranked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_score" />

    <TextView
        android:id="@+id/text_ranked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/label_ranked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/label_popularity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_popularity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_ranked" />

    <TextView
        android:id="@+id/text_popularity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/label_popularity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/label_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_members"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_popularity" />

    <TextView
        android:id="@+id/text_members"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/label_members"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        tools:text="@tools:sample/lorem/random" />

    <TextView
        android:id="@+id/label_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_members" />

    <TextView
        android:id="@+id/text_favorites"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBaseline_toBaselineOf="@id/label_favorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        tools:text="@tools:sample/lorem/random" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>