<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/small_padding">

    <TextView
        android:id="@+id/label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/alternative_titles"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line_hr"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/label_title" />

    <TextView
        android:id="@+id/label_english"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_english"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_hr" />

    <TextView
        android:id="@+id/text_english"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_english"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_synonyms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_synonyms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_english" />

    <TextView
        android:id="@+id/text_synonyms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_synonyms"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/label_japanese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x_small_padding"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/label_japanese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_synonyms" />

    <TextView
        android:id="@+id/text_japanese"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x_small_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guide_line"
        app:layout_constraintBaseline_toBaselineOf="@id/label_japanese"
        tools:text="@tools:sample/lorem" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>